--- a/src/styles/tableStyle.css
+++ b/src/styles/tableStyle.css
@@ -23,20 +23,6 @@ tr {
   background-color: #f2f2f2;
 }
 
-.products {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  
-}
-
-.btn-wrapper {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  height: 70px;
-}
-
 .actions {
   display: flex;
   justify-content: flex-start;
@@ -53,14 +39,41 @@ tr {
   width: fit-content;
 }
 
-.actions button:hover {
-  cursor: pointer;
-}
-
 .actions .plus-btn {
   margin-left: 10px;
 }
 
 .actions .add-to-cart {
-  margin-left: 30px;
+  margin-left: 25px;
+  height: 40px;
+  width: 40px;
+  padding: 3px 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: green;
+  font-size: 15px;
+  font-weight: 700;
+  margin: 10px 0;
+  margin-left: 20px;
+}
+
+.actions .remove-from-cart {
+  margin-left: 10px;
+  height: 40px;
+  width: 40px;
+  padding: 3px 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: red;
+  font-size: 15px;
+  font-weight: 700;
+  margin: 10px 0;
+  margin-left: 10px;
+}
+
+.cart-img, .cart-img-rem {
+  height: 90%;
+  width: auto;
 }
