Added Cart page, router, updated other components.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,3 +8,10 @@ th,
 td {
   border: 1px solid #000;
 }
+
+.actions {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
